Changed sizing on the mobile version of the website

--- a/about_us.html
+++ b/about_us.html
@@ -95,6 +95,60 @@
       text-align: center;
       margin-top: 40px;
     }
+    
+    /* Responsive adjustments */
+    @media screen and (max-width: 768px) {
+      .header-title {
+        font-size: 24px;
+      }
+
+      h2 {
+        font-size: 22px;
+      }
+
+      th, td {
+        font-size: 12px;
+        padding: 8px;
+      }
+
+      table {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 12px;
+        height: 100%;
+        width:100%;
+        table-layout: fixed;
+        overflow-x: auto;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      .header-logo {
+        width: 80px;
+        height: 80px;
+      }
+
+      .header-title {
+        font-size: 20px;
+      }
+
+      h2 {
+        font-size: 18px;
+      }
+
+      th, td {
+        font-size: 10px;
+        padding: 6px;
+      }
+
+      table {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 10px;
+        height: 100%;
+        table-layout: fixed;
+      }
+    }
 
   </style>
 </head>
